--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ tags
 # Persistent undo
 [._]*.un~
 
-# XCode
-*.xcodeproj
+# PyCharm
+.idea/*
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,jupyternotebooks,macos
